[gd_scene load_steps=9 format=3 uid="uid://d1i2tipd43orc"]

[ext_resource type="Script" uid="uid://ca637g86k5w6d" path="res://Scene/Component/player.gd" id="1_den1e"]
[ext_resource type="Script" uid="uid://ci3a5481hm0bl" path="res://Scene/Component/hand_position_handler.gd" id="2_ibsj6"]
[ext_resource type="Texture2D" uid="uid://ddqfqpp41jedp" path="res://Resource/Sprite/horned_godot_man.png" id="2_sblu6"]
[ext_resource type="PackedScene" uid="uid://bo5se6anhlwlx" path="res://Scene/Component/item_bar.tscn" id="4_ibsj6"]
[ext_resource type="PackedScene" uid="uid://b7s5rc31ntenb" path="res://Scene/Component/craft_ui.tscn" id="6_sblu6"]
[ext_resource type="PackedScene" uid="uid://cyqbyg3jnkg8e" path="res://Scene/Component/inventory_ui.tscn" id="8_sblu6"]
[ext_resource type="Material" uid="uid://d0akuv06d2spk" path="res://Resource/Shader/material/pog_bar.tres" id="9_yfmkr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yfmkr"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.483004, 0.862308, 0.975864, 1)
border_blend = true

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("current_hand")]
y_sort_enabled = true
collision_layer = 32
collision_mask = 0
script = ExtResource("1_den1e")
current_hand = NodePath("HandPositionHandler/Right")
auto_energy_consumption = 0.3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-66, -59, 63, -60, 62, 67, -63, 64, -69, -47)

[node name="Hurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PackedVector2Array(-66, -59, 63, -60, 62, 67, -63, 64, -69, -47)

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_sblu6")

[node name="HandPositionHandler" type="Node2D" parent="." node_paths=PackedStringArray("left_hand", "right_hand", "current_hand")]
unique_name_in_owner = true
script = ExtResource("2_ibsj6")
left_hand = NodePath("Left")
right_hand = NodePath("Right")
current_hand = NodePath("Center")

[node name="Left" type="Node2D" parent="HandPositionHandler"]

[node name="Right" type="Node2D" parent="HandPositionHandler"]

[node name="Up" type="Node2D" parent="HandPositionHandler"]
position = Vector2(-1, -50)

[node name="Down" type="Node2D" parent="HandPositionHandler"]
position = Vector2(0, 54)

[node name="Center" type="Node2D" parent="HandPositionHandler"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ItemBar" parent="." instance=ExtResource("4_ibsj6")]
unique_name_in_owner = true
offset_left = -938.0
offset_top = -521.0
offset_right = -182.0
offset_bottom = -417.0

[node name="InventoryComponent" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="InventoryUI" parent="InventoryComponent" instance=ExtResource("8_sblu6")]
unique_name_in_owner = true
position = Vector2(-936, -387)

[node name="CraftUI" parent="InventoryComponent" instance=ExtResource("6_sblu6")]
unique_name_in_owner = true
position = Vector2(-893, 7)

[node name="Stats" type="Node2D" parent="."]
position = Vector2(100, 457)

[node name="HBoxContainer" type="HBoxContainer" parent="Stats"]
offset_left = 251.0
offset_top = 19.0
offset_right = 843.0
offset_bottom = 64.0
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Stats/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.894118, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Energy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bar" type="Control" parent="Stats/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Stats/HBoxContainer/Bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_yfmkr")

[node name="MarginContainer" type="MarginContainer" parent="Stats/HBoxContainer/Bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="EnergyBar" type="ColorRect" parent="Stats/HBoxContainer/Bar/MarginContainer"]
unique_name_in_owner = true
material = ExtResource("9_yfmkr")
layout_mode = 2
color = Color(0.144431, 0.747954, 7.70092e-06, 1)

[node name="HealthBar" type="ColorRect" parent="Stats"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
color = Color(7.89344e-06, 0.914042, 0.0675965, 1)

[node name="SurviveStats" type="Node2D" parent="."]
position = Vector2(655, -518)

[node name="SurvivalTimerLabel" type="RichTextLabel" parent="SurviveStats"]
offset_left = 39.0
offset_top = -18.0
offset_right = 308.0
offset_bottom = 96.0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "SURVIVE FOR:
3 min"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SurvivalSecondTimer" type="Timer" parent="SurviveStats"]
autostart = true

[node name="PhaseTimerLabel" type="RichTextLabel" parent="SurviveStats"]
offset_left = 48.0
offset_top = 113.0
offset_right = 294.0
offset_bottom = 257.0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel" type="Node2D" parent="."]

[node name="WinLabel" type="RichTextLabel" parent="WinLabel"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -569.0
offset_top = -369.0
offset_right = 554.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.745032, 0.844092, 0.901292, 1)
theme_override_colors/font_outline_color = Color(0.819608, 0.0901961, 0, 1)
theme_override_constants/outline_size = 14
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "[wave amp=100.0 freq = 60.0 connected = 3q]YOU WIN
 :D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel2" type="RichTextLabel" parent="WinLabel"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -569.0
offset_top = -369.0
offset_right = 557.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.745032, 0.844092, 0.901292, 1)
theme_override_colors/font_outline_color = Color(0.819608, 0.0901961, 0, 1)
theme_override_constants/outline_size = 14
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "[wave amp=100.0 freq = 60.0 connected = 3q]YOU WIN
 :D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoseLabel" type="RichTextLabel" parent="WinLabel"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -569.0
offset_top = -369.0
offset_right = 556.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.745032, 0.844092, 0.901292, 1)
theme_override_colors/font_outline_color = Color(0.819608, 0.0901961, 0, 1)
theme_override_constants/outline_size = 14
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "[wave amp=100.0 freq = 60.0 connected = 3q]YOU LOSE
 D:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoseLabel2" type="RichTextLabel" parent="WinLabel"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -569.0
offset_top = -369.0
offset_right = 558.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.745032, 0.844092, 0.901292, 1)
theme_override_colors/font_outline_color = Color(0.819608, 0.0901961, 0, 1)
theme_override_constants/outline_size = 14
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "[wave amp=100.0 freq = 60.0 connected = 3q]YOU LOSE
 D:"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="SurviveStats/SurvivalSecondTimer" to="." method="_on_survival_second_timer_timeout"]
